# crypto_backtesting

./: .gitignore  README.md  pyproject.toml  requirements.txt  requrements.txt
backtesting/: __init__.py  __main__.py  _stats.py  backtesting.py
backtesting/test/: 1000CHEEMSUSDT-3m-2024-11.csv  1INCHUSDT-3m-2024-11.csv  __init__.py  _test.py  test_gil.py
binance_bulk_downloader/: binance_bulk_downloader.py
data/: fetch_3_um_data.py  fetch_3m_um_data.py
factor_checking/: demo.ipynb  main.py  single_factor.py  单因子多维度评价配套代码.ipynb
freq_trade/: check_proxy.py  docker-compose.yml  istrategy.py  read_pkl.py  readme.md  test_connection.py
freq_trade/user_data/: config.json  config_backtest.json  tradesv3.sqlite  tradesv3.sqlite-shm  tradesv3.sqlite-wal
freq_trade/user_data/backtest_results/: .last_result.json  backtest-result-2025-02-09_17-23-24.meta.json  backtest-result-2025-02-09_17-24-02.meta.json  backtest-result-2025-02-09_17-35-02.meta.json  backtest-result-2025-02-09_17-36-58.meta.json  backtest-result-2025-02-09_17-48-05.meta.json  backtest-result-2025-02-10_08-41-06.meta.json  backtest-result-2025-02-10_08-41-42.meta.json  backtest-result-2025-02-10_08-42-41.meta.json  backtest-result-2025-02-10_08-43-23.meta.json  backtest-result-2025-02-10_09-13-21.meta.json  backtest-result-2025-02-10_09-52-26.meta.json  backtest-result-2025-02-10_09-52-53.meta.json  backtest-result-2025-02-10_09-53-32.meta.json  backtest-result-2025-02-10_09-55-47.meta.json  backtest-result-2025-02-10_09-57-42.meta.json  backtest-result-2025-02-10_10-00-33.meta.json  (+62 more)
(+1809 files in other folders)
