[project]
name = "crypto_backtesting"
version = "0.1.0"
description = ""
authors = [
    {name = "shaojintian",email = "40530183+shaojintian@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=13.9.4,<14.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

